--- a/app.json
+++ b/app.json
@@ -1,20 +1,21 @@
 {
   "expo": {
-    "name": "Do-n-Delegate",
-    "slug": "do-n-delegate",
+    "name": "Do&Delegate",
+    "slug": "DaD",
     "privacy": "public",
     "sdkVersion": "33.0.0",
     "platforms": [
       "ios",
-      "android"
+      "android",
+      "web"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/images/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/images/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#FC9700"
+      "backgroundColor": "#ffffff"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
