--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/samples": "^3.0.2",
     "expo": "^33.0.0",
     "expo-linear-gradient": "~5.0.1",
+    "firebase": "^6.2.2",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
