added Google login authentication and integration with firebase

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,18 @@
 {
     "cSpell.words": [
+        "googleusercontent",
         "herologo"
     ],
     "cSpell.ignoreWords": [
-        "sdks"
+        "bq",
+        "ee",
+        "f",
+        "hkb",
+        "jnqjlt",
+        "n",
+        "ohbic",
+        "reauth",
+        "sdks",
+        "v"
     ]
 }
