--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@expo/samples": "^3.0.2",
+    "@expo/vector-icons": "^10.0.2",
     "expo": "^33.0.0",
     "expo-linear-gradient": "~5.0.1",
     "firebase": "^6.2.2",
