--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "expo": "^33.0.0",
     "expo-linear-gradient": "~5.0.1",
     "firebase": "^6.2.2",
+    "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-button": "^2.4.0",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-navigation": "^3.11.0"
   },
