--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
+  "name": "empty-project-template",
   "main": "node_modules/expo/AppEntry.js",
+  "private": true,
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^33.0.0",
-    "react": "16.8.3",
-    "react-dom": "^16.8.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-web": "^0.11.4"
+    "expo": "^30.0.1",
+    "react": "16.3.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
-  },
-  "private": true
+    "eslint": "^5.6.1",
+    "eslint-config-amanhimself": "^1.1.9"
+  }
 }
