upon auth, adds new user entry in firestore

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "checkmark",
         "ee",
         "f",
+        "firestore",
+        "gmail",
         "hkb",
         "ionicons",
         "jnqjlt",
