--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-dialog": "^5.6.0",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-slider": "^0.11.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.0"
   },
