--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@expo/samples": "^3.0.2",
     "@expo/vector-icons": "^10.0.2",
     "expo": "^33.0.0",
+    "expo-constants": "^5.0.1",
     "expo-linear-gradient": "~5.0.1",
     "firebase": "^6.2.2",
     "react": "16.8.3",
